modal windows fixed for dark mode

--- a/client/src/scss/core/_layout.scss
+++ b/client/src/scss/core/_layout.scss
@@ -20,7 +20,7 @@ body.dark {
     box-shadow: rgba(194, 191, 191, 0.1) 0px 4px 12px;
   }
   .modal {
-    background-color: $bg-dark-mode;
+    background-color: $bg-light-mode;
   }
   .modal-background {
     background: rgba(255, 255, 255, 0.3);
